// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should summarize 0 expenses 1`] = `
<div>
  <h3>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </h3>
</div>
`;

exports[`should summarize multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    8
     
    expenses
     totalling 
    $1,234,567.89
  </h3>
</div>
`;

exports[`should summarize one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $987.65
  </h3>
</div>
`;
